--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-xs-12">
       <p>Add new Servers or blueprints!</p>
-      <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
-      <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <label for="server-name">Server Name</label>
+      <input type="text" class="form-control" [(ngModel)]="newServerName" id="server-name">
+      <label for="server-content">Server Content</label>
+      <input type="text" class="form-control" [(ngModel)]="newServerContent" id="server-content">
       <br>
       <button
         class="btn btn-primary"
