Assigning an alias to custom events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-cockpit
     (serverCreated)="onSeverAdded($event)"
-    (blueprintCreated)="onBlueprintAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)"
   ></app-cockpit>
   <hr>
   <div class="row">
