Getting access to the Template and DOM with @ViewChild

--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -5,7 +5,8 @@
     <!--    <input type="text" class="form-control" [(ngModel)]="newServerName" id="server-name">-->
     <input type="text" class="form-control" id="server-name" #serverNameInput>
     <label for="server-content">Server Content</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerContent" id="server-content">
+    <!--    <input type="text" class="form-control" [(ngModel)]="newServerContent" id="server-content">-->
+    <input type="text" class="form-control" id="server-content" #serverContentInput>
     <br>
     <button
       class="btn btn-primary"
